Update to Java 25 baseline